--- a/esprit_crm_backend/pom.xml
+++ b/esprit_crm_backend/pom.xml
@@ -51,16 +51,41 @@
     <groupId>com.fasterxml.jackson.datatype</groupId>
     <artifactId>jackson-datatype-jsr310</artifactId>
     <version>2.11.0</version>
+</dependency>	
+
+
+
+ <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring4</artifactId>
+        <version>2.1.6.RELEASE</version>
+    </dependency>
+
+
+
+<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    
+
+
+
+<dependency>
+   <groupId>com.fasterxml.jackson.datatype</groupId>
+   <artifactId>jackson-datatype-jsr310</artifactId>
 </dependency>
+
 
 
 
 	</dependencies>
 	
 
-	
-	
-	
 	
 
 	<build>
@@ -69,7 +94,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			
+			
+			
+			
+			
 		</plugins>
 	</build>
 
 </project>
+
+
