--- a/esprit_crm_backend/src/main/resources/application.properties
+++ b/esprit_crm_backend/src/main/resources/application.properties
@@ -2,16 +2,30 @@ spring.datasource.url=jdbc:mysql://localhost:3306/crm_esprit?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=
 
-server.port = 8090
+
+
+server.port = 9090
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.open-in-view = false 
+spring.thymeleaf.cache= false 
+
+
+
+
+
+
 spring.jackson.serialization.write-dates-as-timestamps: false
-	
 
 
+
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 	
 	
